--- a/src/main/resources/templates/html/inspeccionar/inspeccionar.html
+++ b/src/main/resources/templates/html/inspeccionar/inspeccionar.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle de Figura</title>
-    <!-- Agrega tus estilos y scripts aquí si es necesario -->
+    <link rel="stylesheet" href="/css/inspeccionar.css">
 </head>
 
 <body>
 <h1>Detalle de Figura</h1>
-<div>
+<div class="figure-details">
     <img th:src="${figura.url}" alt="imagen">
     <h2 th:text="${figura.nombre}"></h2>
     <p th:text="${figura.des}"></p>
-    <p>Precio: <span th:text="${figura.precio}"></span></p>
+    <p>Precio: <span class="price" th:text="${figura.precio}"></span></p>
     <!-- Agrega más detalles de la figura si lo necesitas -->
 </div>
 <!-- Agrega más contenido según tus necesidades -->
