--- a/src/main/resources/templates/html/naruto/index.html
+++ b/src/main/resources/templates/html/naruto/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -12,71 +12,94 @@
 </head>
 
 <body>
-    <header class="p-3 bg-dark text-white fixed-top ">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
-                    <li><a href="/inicio" class="nav-link px-2 text-secondary">Inicio</a></li>
-                    <li><a href="/caracteristicas" class="nav-link px-2 text-white">Características</a></li>
-                    <li><a href="/pagoEnca" class="nav-link px-2 text-white">Precios</a></li>
-                    <li><a href="/faqs" class="nav-link px-2 text-white">FAQs</a></li>
-                    <li><a href="/encabezado" class="nav-link px-2 text-white">Acerca</a></li>
+<header class="p-3 bg-dark text-white fixed-top ">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
+                <li><a href="/inicio" class="nav-link px-2 text-secondary">Inicio</a></li>
+                <li><a href="/caracteristicas" class="nav-link px-2 text-white">Características</a></li>
+                <li><a href="/pagoEnca" class="nav-link px-2 text-white">Precios</a></li>
+                <li><a href="/faqs" class="nav-link px-2 text-white">FAQs</a></li>
+                <li><a href="/encabezado" class="nav-link px-2 text-white">Acerca</a></li>
+            </ul>
+            <!-- Esto es para que te pueda filtrar estoy llamando al controlador-->
 
+            <div id="toggleSearchForm" class="d-inline-flex align-items-center" style="margin-right: 10px;">
+                <i class="bi bi-search"></i>
+                <form id="searchForm" role="search" method="get" action="/figuras/filtrar">
+                    <label for="buscarPorNombre" class="form-label" id="Filtro"></label>
+                    <input type="text" class="form-control form-control-dark" id="buscarPorNombre"
+                           placeholder="Buscar..." name="nombre">
+                </form>
+            </div>
+            <div class="d-inline-flex align-items-center" id="addToCart" style="margin-right: 20px;">
+                <i class="bi bi-save"></i>
+            </div>
+
+            <div>
+
+                <div th:if="${#authorization.expression('!isAuthenticated()')}">
+                    <div class="d-flex justify-content-end">
+                        <a href="/inicioSesion/login" class="btn btn-outline-light me-2">Iniciar sesión</a>
+                        <a href="/usuario/signup" class="btn btn-warning">Registrar</a>
+                    </div>
+                </div>
+                <ul style="margin-top: auto" class="nav ">
                     <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            <!--  mirar por que da error-->
-                            <!-- <span th:text="${#authentication.name}">Opciones</span> <span class="caret"></span>-->
+                        <!-- pones estio -->
+                        <a class="nav-link dropdown-toggle text-primary" href="#" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false" style="padding-left: 0;">
+                                <span class="text-primary">
+                                    <span th:text="${#authentication.name}">Nombre de Usuario</span>
+                                </span>
                         </a>
+
                         <ul class="dropdown-menu">
-                            <li><span class="dropdown-item" th:text="' App: ' + ${session.numVisitasApp}"></span></li>
-                            <li><span class="dropdown-item" th:text="' index: ' + ${session.numVisitasIndex}"></span>
-                            </li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
                             <li><a href="/perfil/new" class="nav-link px-2 text-secondary">Crear perfil</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
                             <li><a href="/perfil/list" class="nav-link px-2 text-secondary">Lista perfiles</a></li>
+                            <li>
+                                <form th:action="@{/usuario/logout}" method="post">
+                                    <button type="submit" class="btn btn-danger">Salir</button>
+                                </form>
+                            </li>
                         </ul>
                     </li>
                 </ul>
-                <!-- Esto es para que te pueda filtrar estoy llamando al controlador-->
 
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search" method="get"
-                    action="/figuras/filtrar">
-                    <label for="buscarPorNombre" class="form-label" id="Filtro"></label>
-                    <input type="text" class="form-control form-control-dark" id="buscarPorNombre"
-                        placeholder="Buscar..." name="nombre">
-                </form>
-
-                <div class="text-end">
-                    <a href="/inicioSesion" class="btn btn-outline-light me-2">Iniciar sesion</a>
-                </div>
-                <div class="text-end">
-
-
-                    <a href="/registrar" class="btn btn-warning"> Registrar </a>
-                    <!--    <form id="logoutForm" th:action="@{/usuario/logout}" method="post">
-                    <button type="submit" class="btn btn-warning">
-                        <i class="fas fa-sign-out-alt"></i> Exit
-                    </button>
-                </form>-->
-                </div>
-                <!--   Son para que te cuentes los inicios de sesion est atambien puesto arriba
-          <div  sec:authorize="hasRole('ROLE_ADMIN')" >
-
-                   <span class="dropdown-item" th:text=" ' App: ' + ${session.numVisitasApp}"></span>
-
-
-                   <span class="dropdown-item" th:text=" ' index: ' + ${session.numVisitasIndex}"></span>
-           </div> -->
             </div>
+
+
+
+            <div id="cart" style="margin: 10px;">
+                <i class="bi bi-cart"></i>
+                <span id="cartItemCount">0</span>
+            </div>
+
+            <div id="cartContainer" class="cart-container" style="display: none;">
+                <h2>Carrito de Compras</h2>
+                <ul id="cartItems"></ul>
+                <div id="cartTotal">Total: $0.00</div>
+                <button id="btnComprar">Comprar</button>
+            </div>
+            <!--   Son para que te cuentes los inicios de sesion est atambien puesto arriba
+      <div  sec:authorize="hasRole('ROLE_ADMIN')" >
+
+               <span class="dropdown-item" th:text=" ' App: ' + ${session.numVisitasApp}"></span>
+
+
+               <span class="dropdown-item" th:text=" ' index: ' + ${session.numVisitasIndex}"></span>
+       </div> -->
         </div>
-    </header>
+
+
+
+
+    </div>
+</header>
 
     <div class="container">
         <div class="card-container"  style="margin-top: 110px;">
@@ -104,7 +127,9 @@
                                 <td th:text="${figuraNaruto.des}">Descripción</td>
                                 <td th:text="${figuraNaruto.precio}">Precio</td>
                                 <td>
-                                    <a href=""> <button type="button" class="boton btn-comprar">Información</button>
+                                    <a th:href="@{/detalle/naruto/{id}(id=${figuraNaruto.id})}">
+
+                                        <button type="button" class="boton btn-comprar">Información</button>
                                     </a>
 
                                 </td>
