pagian de administrador

--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -72,11 +72,11 @@
                             </a>
 
                             <ul class="dropdown-menu">
-                                <li><a href="/perfil/new" class="nav-link px-2 text-secondary">Crear perfil</a></li>
+                                <li><a href="/perfil/new" class="nav-link px-2 text-secondary">Agregar  figura</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a href="/perfil/list" class="nav-link px-2 text-secondary">Lista perfiles</a></li>
+                                <li><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar pagina</a></li>
                                 <li>
                                     <form th:action="@{/usuario/logout}" method="post">
                                         <button type="submit" class="btn btn-danger">Salir</button>
