--- a/src/main/resources/templates/html/adminMonitorizar/admin.html
+++ b/src/main/resources/templates/html/adminMonitorizar/admin.html
@@ -3,16 +3,79 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Detalle de Figura</title>
-    <link rel="stylesheet" href="/css/inspeccionar.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Administrador</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/caja-boostrap.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    
+    <style>
+    
+
+        h3 {
+            text-align: center;
+            margin-top: 30px;
+            margin-bottom: 20px;
+            font-size: 24px;
+            color: #333;
+        }
+
+        .figura-container {
+            display: inline-block;
+            width: 30%;
+            margin-right: 2%;
+            vertical-align: top;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+            background-color: #fff;
+        }
+
+        .figura-container img {
+            width: 100%;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+        }
+
+        .figura-container > div {
+            padding: 10px;
+        }
+
+        .figura-container h2 {
+            margin-top: 0;
+            margin-bottom: 10px;
+            font-size: 18px;
+            color: #333;
+        }
+
+        .figura-container p {
+            margin: 0;
+            font-size: 16px;
+            color: #666;
+        }
+
+        button {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            margin-top: 10px;
+            border: none;
+            border-radius: 5px;
+            background-color: #000000;
+            color: #fff;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #999090;
+        }
+    </style>
 </head>
 
 <body>
-
     <header class="p-3 bg-dark text-white fixed-top ">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -23,7 +86,7 @@
                     <li><a href="/pagoEnca" class="nav-link px-2 text-white">Precios</a></li>
                     <li><a href="/faqs" class="nav-link px-2 text-white">FAQs</a></li>
                     <li><a href="/encabezado" class="nav-link px-2 text-white">Acerca</a></li>
-                </ul>
+               </ul>
                 <!-- Esto es para que te pueda filtrar estoy llamando al controlador-->
 
                 <div id="toggleSearchForm" class="d-inline-flex align-items-center" style="margin-right: 10px;">
@@ -57,11 +120,11 @@
                             </a>
 
                             <ul class="dropdown-menu">
-                                <li><a href="/perfil/new" class="nav-link px-2 text-secondary">Crear perfil</a></li>
+                                <li><a href="/perfil/new" class="nav-link px-2 text-secondary">Agregar  figura</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a href="/perfil/list" class="nav-link px-2 text-secondary">Lista perfiles</a></li>
+                                <li><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar pagina</a></li>
                                 <li>
                                     <form th:action="@{/usuario/logout}" method="post">
                                         <button type="submit" class="btn btn-danger">Salir</button>
@@ -75,23 +138,13 @@
 
 
 
-                <div id="cart" style="margin: 10px;">
-                    <i class="bi bi-cart"></i>
-                    <span id="cartItemCount">0</span>
-                </div>
-
-                <div id="cartContainer" class="cart-container" style="display: none;">
-                    <h2>Carrito de Compras</h2>
-                    <ul id="cartItems"></ul>
-                    <div id="cartTotal">Total: $0.00</div>
-                    <button id="btnComprar">Comprar</button>
-                </div>
+           
                 <!--   Son para que te cuentes los inicios de sesion est atambien puesto arriba
           <div  sec:authorize="hasRole('ROLE_ADMIN')" >
-    
+
                    <span class="dropdown-item" th:text=" ' App: ' + ${session.numVisitasApp}"></span>
-    
-    
+
+
                    <span class="dropdown-item" th:text=" ' index: ' + ${session.numVisitasIndex}"></span>
            </div> -->
             </div>
@@ -101,24 +154,58 @@
 
         </div>
     </header>
-    <div style="margin-top: 100px;">
+  
+    <div class="container" style="margin-top: 120px;">
+        <h3 >Figuras pagina principal</h3>
+        <div th:each="figura: ${listaFigura}" class="figura-container">
+            <div>
+                <img th:src="${figura.url}" alt="imagen">
+                <h2 th:text="${figura.nombre}"></h2>
+                <p>Precio: <span class="price" th:text="${figura.precio}"></span></p>
+                <button type="button"> Editar</button>
+                <button type="button"> Borrar</button>
 
-        <h1>Detalle de Figura</h1>
-        <div class="figure-details">
-            <img th:src="${figura.url}" alt="imagen">
-            <h2 th:text="${figura.nombre}"></h2>
-            <p th:text="${figura.des}"></p>
-            <p>Precio: <span class="price" th:text="${figura.precio}"></span></p>
-            <!-- Agrega más detalles de la figura si lo necesitas -->
+            </div>
         </div>
+    
+        <h3>Figuras One piece </h3>
+        <div th:each="figuraOnePiece: ${onePiece}" class="figura-container">
+
+            <div>
+                <img th:src="${figuraOnePiece.url}" alt="imagen">
+                <h2 th:text="${figuraOnePiece.nombre}"></h2>
+                <p>Precio: <span class="price" th:text="${figuraOnePiece.precio}"></span></p>
+            </div>
+            <button type="button"> Editar</button>
+            <button type="button"> Borrar</button>
+        </div>
+        <h3>Figuras Naruto </h3>
+        <div th:each="figuraNaruto: ${naruto}" class="figura-container">
+
+            <div>
+                <img th:src="${figuraNaruto.url}" alt="imagen">
+                <h2 th:text="${figuraNaruto.nombre}"></h2>
+                <p>Precio: <span class="price" th:text="${figuraNaruto.precio}"></span></p>
+            </div>
+            <button type="button"> Editar</button>
+            <button type="button"> Borrar</button>
+        </div>
+        <h3>Figuras Dragon Ball Z</h3>
+        <div th:each="figuraDragonBall: ${dragonBall}" class="figura-container">
+
+            <div>
+                <img th:src="${figuraDragonBall.url}" alt="imagen">
+                <h2 th:text="${figuraDragonBall.nombre}"></h2>
+                <p>Precio: <span class="price" th:text="${figuraDragonBall.precio}"></span></p>
+            </div>
+            <button type="button"> Editar</button>
+            <button type="button"> Borrar</button>
+        </div>
+
+
     </div>
 
-    <!-- Agrega más contenido según tus necesidades -->
 
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
 </body>
 
 </html>
