--- a/src/main/resources/templates/html/adminMonitorizar/admin.html
+++ b/src/main/resources/templates/html/adminMonitorizar/admin.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    
-    <style>
-    
 
+    <style>
         h3 {
             text-align: center;
             margin-top: 30px;
@@ -38,7 +36,7 @@
             border-top-right-radius: 5px;
         }
 
-        .figura-container > div {
+        .figura-container>div {
             padding: 10px;
         }
 
@@ -55,7 +53,7 @@
             color: #666;
         }
 
-        button {
+        .button {
             display: block;
             width: 100%;
             padding: 10px;
@@ -67,9 +65,10 @@
             font-size: 16px;
             cursor: pointer;
             transition: background-color 0.3s;
+            text-align: center;
         }
 
-        button:hover {
+        .button:hover {
             background-color: #999090;
         }
     </style>
@@ -86,7 +85,7 @@
                     <li><a href="/pagoEnca" class="nav-link px-2 text-white">Precios</a></li>
                     <li><a href="/faqs" class="nav-link px-2 text-white">FAQs</a></li>
                     <li><a href="/encabezado" class="nav-link px-2 text-white">Acerca</a></li>
-               </ul>
+                </ul>
                 <!-- Esto es para que te pueda filtrar estoy llamando al controlador-->
 
                 <div id="toggleSearchForm" class="d-inline-flex align-items-center" style="margin-right: 10px;">
@@ -120,11 +119,12 @@
                             </a>
 
                             <ul class="dropdown-menu">
-                                <li><a href="/perfil/new" class="nav-link px-2 text-secondary">Agregar  figura</a></li>
+                                <li><a href="/perfil/new" class="nav-link px-2 text-secondary">Agregar figura</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar pagina</a></li>
+                                <li><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar pagina</a>
+                                </li>
                                 <li>
                                     <form th:action="@{/usuario/logout}" method="post">
                                         <button type="submit" class="btn btn-danger">Salir</button>
@@ -138,7 +138,7 @@
 
 
 
-           
+
                 <!--   Son para que te cuentes los inicios de sesion est atambien puesto arriba
           <div  sec:authorize="hasRole('ROLE_ADMIN')" >
 
@@ -154,20 +154,21 @@
 
         </div>
     </header>
-  
+
     <div class="container" style="margin-top: 120px;">
-        <h3 >Figuras pagina principal</h3>
+        <h3>Figuras pagina principal</h3>
         <div th:each="figura: ${listaFigura}" class="figura-container">
             <div>
                 <img th:src="${figura.url}" alt="imagen">
                 <h2 th:text="${figura.nombre}"></h2>
                 <p>Precio: <span class="price" th:text="${figura.precio}"></span></p>
-                <button type="button"> Editar</button>
-                <button type="button"> Borrar</button>
+                <a class="button" th:href="@{/edit/{id}(id=${figura.id})}">
+                    Editar</a>
+                <a  class="button" th:href="@{/figuras/delete/{id}(id=${figura.id})}">Borrar</a>
 
             </div>
         </div>
-    
+
         <h3>Figuras One piece </h3>
         <div th:each="figuraOnePiece: ${onePiece}" class="figura-container">
 
