--- a/src/main/resources/templates/html/adminMonitorizar/admin.html
+++ b/src/main/resources/templates/html/adminMonitorizar/admin.html
@@ -81,10 +81,6 @@
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
                     <li><a href="/inicio" class="nav-link px-2 text-secondary">Inicio</a></li>
-                    <li><a href="/caracteristicas" class="nav-link px-2 text-white">Características</a></li>
-                    <li><a href="/pagoEnca" class="nav-link px-2 text-white">Precios</a></li>
-                    <li><a href="/faqs" class="nav-link px-2 text-white">FAQs</a></li>
-                    <li><a href="/encabezado" class="nav-link px-2 text-white">Acerca</a></li>
                 </ul>
                 <!-- Esto es para que te pueda filtrar estoy llamando al controlador-->
 
@@ -96,9 +92,7 @@
                             placeholder="Buscar..." name="nombre">
                     </form>
                 </div>
-                <div class="d-inline-flex align-items-center" id="addToCart" style="margin-right: 20px;">
-                    <i class="bi bi-save"></i>
-                </div>
+
 
                 <div>
 
@@ -177,11 +171,11 @@
                 <h2 th:text="${figuraOnePiece.nombre}"></h2>
                 <p>Precio: <span class="price" th:text="${figuraOnePiece.precio}"></span></p>
             
-                <a class="button" th:href="@{/edit/onePiece/{id}id=$onePiece.id}">Editar</a>
-      <!--           <a  class="button" th:href="@{/figuras/delete/{id}(id=${onePiece.id})}">Borrar</a>
- -->
-            
+              <a class="button"th:href="@{/edit/onePiece/{id}(id=${figuraOnePiece.id})}"> Editar<a/>
+               <a  class="button" th:href="@{/figuras/delete/{id}(id=${figuraOnePiece.id})}">Borrar</a>
             </div>
+        </div>
+
          
         </div>
         <h3>Figuras Naruto </h3>
@@ -191,9 +185,12 @@
                 <img th:src="${figuraNaruto.url}" alt="imagen">
                 <h2 th:text="${figuraNaruto.nombre}"></h2>
                 <p>Precio: <span class="price" th:text="${figuraNaruto.precio}"></span></p>
+                <a class="button" th:href="@{/edit/naruto/{id}(id=${figuraNaruto.id})}">Editar</a>
+                    Editar</a>
+                <a  class="button" th:href="@{/figuras/delete/{id}(id=${figuraNaruto.id})}">Borrar</a>
+
             </div>
-            <button type="button"> Editar</button>
-            <button type="button"> Borrar</button>
+
         </div>
         <h3>Figuras Dragon Ball Z</h3>
         <div th:each="figuraDragonBall: ${dragonBall}" class="figura-container">
@@ -202,9 +199,12 @@
                 <img th:src="${figuraDragonBall.url}" alt="imagen">
                 <h2 th:text="${figuraDragonBall.nombre}"></h2>
                 <p>Precio: <span class="price" th:text="${figuraDragonBall.precio}"></span></p>
+                <a class="button" th:href="@{/edit/dragonBall/{id}(id=${figuraDragonBall.id})}">
+                    Editar</a>
+                <a  class="button" th:href="@{/figuras/delete/{id}(id=${figuraDragonBall.id})}">Borrar</a>
+
             </div>
-            <button type="button"> Editar</button>
-            <button type="button"> Borrar</button>
+
         </div>
 
 
