segui haciendo lo de comprar

--- a/src/main/resources/templates/html/iniciarSesion/despuesLogin.html
+++ b/src/main/resources/templates/html/iniciarSesion/despuesLogin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido a la tienda de figuras de anime</title>
+    <link rel="icon" href="/imagen/pestaña/corona.jpg" >
     <style>
         body {
             font-family: Arial, sans-serif;
