--- a/src/main/resources/templates/html/editarFigura/editarOnePiece.html
+++ b/src/main/resources/templates/html/editarFigura/editarOnePiece.html
@@ -5,6 +5,7 @@
     <title>Agregar cancion</title>
 
     <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+    <link rel="icon" href="/imagen/pestaña/corona.jpg" >
 
 </head>
 <body>
