--- a/src/main/resources/templates/html/encabezado/caracteristicas.html
+++ b/src/main/resources/templates/html/encabezado/caracteristicas.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/caja-boostrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="icon" href="/imagen/pestaña/corona.jpg" >
 </head>
 <body>
     <header class="p-3 bg-dark text-white fixed-top ">
