--- a/src/main/resources/templates/html/informacion/info.html
+++ b/src/main/resources/templates/html/informacion/info.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/caja-boostrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/tabla.css">
+    <link rel="icon" href="/imagen/pestaña/corona.jpg" >
 
 
 
