--- a/src/main/resources/templates/html/inspeccionar/inspeccionar.html
+++ b/src/main/resources/templates/html/inspeccionar/inspeccionar.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/caja-boostrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="icon" href="/imagen/pestaña/corona.jpg" >
 
 </head>
 
