--- a/src/main/resources/templates/html/registarSesion/signup.html
+++ b/src/main/resources/templates/html/registarSesion/signup.html
@@ -8,6 +8,7 @@
 <title>Login</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="icon" href="/imagen/pestaña/corona.jpg" >
 </head>
 
 <body>
