--- a/src/main/resources/templates/html/dragonBall/index.html
+++ b/src/main/resources/templates/html/dragonBall/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -138,8 +138,7 @@
                                     <!--<input class="form-check-input" type="checkbox" id="compra">
                                 
                                     <label class="form-check-label" for="compra">Compra</label> -->
-                                    <a href="">
-
+                                    <a th:href="@{/comprar/dragon(id=${figuraDragonBall.id})}">
                                         <button type="button" class="boton btn-comprar">Comprar</button>
                                     </a>
 
