--- a/src/main/resources/templates/html/naruto/index.html
+++ b/src/main/resources/templates/html/naruto/index.html
@@ -138,8 +138,7 @@
                                     <!--<input class="form-check-input" type="checkbox" id="compra">
                                 
                                     <label class="form-check-label" for="compra">Compra</label> -->
-                                    <a href="">
-
+                                    <a th:href="@{/comprar/naruto(id=${figuraNaruto.id})}">
                                         <button type="button" class="boton btn-comprar">Comprar</button>
                                     </a>
 
