--- a/src/main/resources/templates/html/onePiece/index.html
+++ b/src/main/resources/templates/html/onePiece/index.html
@@ -136,8 +136,7 @@
                                     <!--<input class="form-check-input" type="checkbox" id="compra">
                                 
                                     <label class="form-check-label" for="compra">Compra</label> -->
-                                    <a href="">
-
+                                    <a th:href="@{/comprar/onePiece(id=${figuraOne.id})}">
                                         <button type="button" class="boton btn-comprar">Comprar</button>
                                     </a>
 
